// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Tokens Callback it can create a token 1`] = `
Object {
  "body": Object {
    "card": Object {
      "cardNumber": "string",
      "cardholderName": "string",
      "expiryDate": 529,
    },
    "externalTokenLinked": Object {
      "ComputedToken": "string",
      "GTSComputedToken": "string",
      "GeneratedToken": "string",
    },
    "isNewToken": true,
    "token": "43763dd9-6b6b-4b05-914a-5953b14dcbba",
    "tokenStatus": "UNCHANGED",
  },
  "isSuccess": true,
  "status": 200,
}
`;

exports[`Tokens Callback it can get a token 1`] = `
Object {
  "body": Object {
    "card": Object {
      "alias": "483247XXXXXX0249",
      "data": Object {
        "cardWithoutCvv": Object {
          "cardNumber": "string",
          "cardholderName": "string",
          "expiryDate": 529,
        },
      },
    },
    "eWallet": Object {
      "alias": "customer-account@email.com",
      "customer": Object {
        "billingAddress": Object {
          "additionalInfo": "floor 9",
          "city": "Zaventem",
          "countryCode": "BE",
          "houseNumber": 3,
          "state": "string",
          "street": "Da Vinci street",
          "zip": 1930,
        },
        "companyInformation": Object {
          "name": "Customer Company Name",
        },
        "personalInformation": Object {
          "name": Object {
            "firstName": "John",
            "surname": "Doe",
          },
        },
      },
    },
    "externalTokenLinked": Object {
      "ComputedToken": "string",
      "GTSComputedToken": "string",
      "GeneratedToken": "string",
    },
    "id": "43763dd9-6b6b-4b05-914a-5953b14dcbba",
    "isTemporary": true,
    "paymentProductId": 840,
  },
  "isSuccess": true,
  "status": 200,
}
`;

exports[`Tokens Callback it can remove a token 1`] = `
Object {
  "body": null,
  "isSuccess": true,
  "status": 204,
}
`;

exports[`Tokens Promises it can create a token 1`] = `
Object {
  "body": Object {
    "card": Object {
      "cardNumber": "string",
      "cardholderName": "string",
      "expiryDate": 529,
    },
    "externalTokenLinked": Object {
      "ComputedToken": "string",
      "GTSComputedToken": "string",
      "GeneratedToken": "string",
    },
    "isNewToken": true,
    "token": "43763dd9-6b6b-4b05-914a-5953b14dcbba",
    "tokenStatus": "UNCHANGED",
  },
  "isSuccess": true,
  "status": 200,
}
`;

exports[`Tokens Promises it can get a token 1`] = `
Object {
  "body": Object {
    "card": Object {
      "alias": "483247XXXXXX0249",
      "data": Object {
        "cardWithoutCvv": Object {
          "cardNumber": "string",
          "cardholderName": "string",
          "expiryDate": 529,
        },
      },
    },
    "eWallet": Object {
      "alias": "customer-account@email.com",
      "customer": Object {
        "billingAddress": Object {
          "additionalInfo": "floor 9",
          "city": "Zaventem",
          "countryCode": "BE",
          "houseNumber": 3,
          "state": "string",
          "street": "Da Vinci street",
          "zip": 1930,
        },
        "companyInformation": Object {
          "name": "Customer Company Name",
        },
        "personalInformation": Object {
          "name": Object {
            "firstName": "John",
            "surname": "Doe",
          },
        },
      },
    },
    "externalTokenLinked": Object {
      "ComputedToken": "string",
      "GTSComputedToken": "string",
      "GeneratedToken": "string",
    },
    "id": "43763dd9-6b6b-4b05-914a-5953b14dcbba",
    "isTemporary": true,
    "paymentProductId": 840,
  },
  "isSuccess": true,
  "status": 200,
}
`;

exports[`Tokens Promises it can remove a token 1`] = `
Object {
  "body": null,
  "isSuccess": true,
  "status": 204,
}
`;
